<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView123"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_center_app_icon"
                android:layout_width="@dimen/center_img_width"
                android:layout_height="@dimen/center_img_width"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/center_img_top_margin"
                android:scaleType="fitCenter"
                android:src="@drawable/iiser_logo" />

            <TextView
                android:id="@+id/user_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center"  />

            <include
                android:id="@+id/container_header_img"
                layout="@layout/activity_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!-- <ImageView
                 android:id="@+id/img_college_pic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/college_pic" />-->
            <!-- android:layout_marginTop="@dimen/center_img_top_margin"-->


            <TextView
                android:id="@+id/txt_about_us"
                style="@style/txt_about_us"
                android:layout_marginTop="@dimen/center_img_top_margin"
                android:text="@string/txt_about_us"
                android:textStyle="bold" />

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_about_us_value1"
                android:gravity="fill_horizontal"
                android:text="@string/txt_about_us_value1" />

            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_about_us_value2"
                android:text="@string/txt_about_us_value2" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
